fix bug 937576 - Remove extra spacing in document summary

--- a/media/redesign/stylus/mixins.styl
+++ b/media/redesign/stylus/mixins.styl
@@ -23,7 +23,7 @@ vendorize-value(property, value, more = '') {
 
 /* prevents spacing of a given element if it's the last child */
 prevent-last-child-spacing(element = '*', property = 'padding') {
-  & unquote(element):last-child {
+  & {unquote(element)}:last-child {
     {property}: 0;
   }
 }
