--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -163,9 +163,10 @@ article {
   background: light-background-color;
   font-weight: bold;
   padding: grid-spacing;
-  margin-bottom: grid-spacing;
+  margin-bottom: content-block-margin;
 
-  prevent-last-child-spacing(p, margin-bottom);
+  prevent-last-child-spacing('*', margin-bottom);
+  prevent-last-child-spacing('*', padding-bottom);
 }
 
 #page-attachments {
